# openclaw-secrets-broker

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
examples/: auth.json.example  com.example.secrets-broker.plist.template  com.example.secrets-daemon.plist.template  secrets.json.example
helpers/: setup-google-oauth.py
src/secrets_broker/: __init__.py  __main__.py  audit.py  auth.py  config.py  http_pool.py  secrets.py  server.py  utils.py
src/secrets_broker/endpoints/: __init__.py  agentmail.py  completions.py  elevenlabs.py  extract.py  github.py  google_calendar.py  health.py  linear.py  pdl.py  replicate.py  slack.py  speech.py  supabase.py  webhooks.py
tests/: test_auth.py  test_config.py  test_endpoint_registry.py
