[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-secrets-broker"
version = "0.2.0"
description = "Localhost HTTP broker that performs credentialed API operations on behalf of a less-trusted caller without exposing the underlying credentials."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Levi Voelz" }]
keywords = ["secrets", "broker", "agent", "credentials", "localhost", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]

# Pure stdlib. The whole point is that you can `python -m secrets_broker`
# with nothing to pip install. Packaging metadata is for the CLI, version
# pinning, and discoverability — not for runtime deps.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/levivoelz/openclaw-secrets-broker"
Repository = "https://github.com/levivoelz/openclaw-secrets-broker"
Issues = "https://github.com/levivoelz/openclaw-secrets-broker/issues"

[project.scripts]
secrets-broker = "secrets_broker.server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/secrets_broker"]

[tool.hatch.build.targets.sdist]
include = [
    "src/secrets_broker/**",
    "examples/**",
    "helpers/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
